WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194083
iOS: Crash in InteractiveUpdateHandler set by ViewGestureController::beginSwipeGesture
https://bugs.webkit.org/show_bug.cgi?id=194083
Summary
iOS: Crash in InteractiveUpdateHandler set by ViewGestureController::beginSwi...
Ryosuke Niwa
Reported
2019-01-30 23:30:46 PST
We sometimes crash inside InteractiveUpdateHandler set by ViewGestureController::beginSwipeGesture because m_webPageProxyForBackForwardListForCurrentSwipe is null. <
rdar://problem/46222074
>
Attachments
Fix attempt
(2.83 KB, patch)
2019-01-30 23:39 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Updated the change log
(7.99 KB, patch)
2019-01-30 23:44 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Updated the change log
(3.19 KB, patch)
2019-01-30 23:45 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-01-30 23:39:55 PST
Created
attachment 360697
[details]
Fix attempt
Ryosuke Niwa
Comment 2
2019-01-30 23:44:43 PST
Created
attachment 360698
[details]
Updated the change log
Ryosuke Niwa
Comment 3
2019-01-30 23:45:10 PST
Created
attachment 360699
[details]
Updated the change log
Ryosuke Niwa
Comment 4
2019-01-31 00:37:06 PST
Thanks for the timely review!
Ryosuke Niwa
Comment 5
2019-01-31 00:40:59 PST
Comment on
attachment 360699
[details]
Updated the change log Clearing flags on attachment: 360699 Committed
r240772
: <
https://trac.webkit.org/changeset/240772
>
Ryosuke Niwa
Comment 6
2019-01-31 00:41:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug